assets/css/main.css
/** {
	margin: 0;
	padding: 0;
	-webkit-box-sizing: border-box;
			box-sizing: border-box;
}*/

html {
	/*position: relative;*/
	font-size: 20px;
	color: #fff;
	letter-spacing: 1px;
}

body {
	font-family: 'Lato', sans-serif, arial;
	font-size: 20px;
	font-weight: 300;
}

/*.main-container {
	margin: 0;
	padding: 0;
}*/

a {
	text-decoration: none;
	color: inherit;
}

h1 {
	margin: 0;
	padding: 60px 0;
	font-size: 400%;
	font-weight: 300;
}

section {
	min-height: 100vh;
	/*position: relative;*/  /* For the purposes of absolute-positioning the social icons. */
}

/* HERO SECTION */
#hero {

	min-height: 100vh;
	background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))) , url(../img/hands-xl.jpg);
	background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)) , url(../img/hands-xl.jpg);
	background-size: cover; /*Shows entire image*/
	background-position: center; /*Centers the background*/

}

/*.brand {
	width: 75%;
	padding-top: 150px;
	margin-left: 100px;
}*/

/*.hero-button-box {
	margin: 20px 0 100px 120px;
}*/

/* BUTTONS */

.custom-btn {
	/*margin: 40px;*/
	font-size: 110%;
}

.custom-btn:link,
.custom-btn:visited,
input[type=submit] {
	display: inline-block;
	padding: 15px 30px;
	font-weight: 400;
	text-decoration: none;
	border-radius: 200px;
	-webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
	transition: background-color 0.2s, border 0.2s, color 0.2s; /* Transition takes 0.2 seconds. */
}

.custom-btn-full:link,
.custom-btn-full:visited,
input[type=submit] {
	background-color: #e67e22;
	border: 2px solid #e67e22;
	color: #fff;
	margin-right: 15px;
}

.custom-btn-ghost:link,
.custom-btn-ghost:visited {
	border: 2px solid #e67e22;
	color: #e67e22;
}

/* Button color darkens when hovered or clicked: */
.custom-btn:hover,
.custom-btn:active,
input[type=submit]:hover,
input[type=submit]:active {
	background-color: #cf6d17;
}

/* Adds border when hovered or clicked, for consistency with btn-ghost: */
.custom-btn-full:hover,
.custom-btn-full:active,
input[type=submit] {
	border: 2px solid #cf6d17;
}

.custom-btn-ghost:hover,
.custom-btn-ghost:active {
	border: 2px solid #cf6d17;
	color: #fff;
}

.btn-orange:link,
.btn-orange:visited {

	background-color: #e67e22;
	color: #fff;

}

.btn-orange:hover,
.btn-orange:active {

	background-color: #cf6d17;
	color: #fff;

}

.btn-outline-orange:link,
.btn-outline-orange:visited {
	background: transparent;
	border: 2px solid #cf6d17;
	color: #cf6d17;
}

.btn-outline-orange:hover,
.btn-outline-orange:active {
	background-color: #cf6d17;
	color: #fff;
}

 .button-text {
 	margin-bottom: 0;
 }

/* NAV */

/* PIEL CANELA LOGO */

.piel-logo {
	
	/*position: absolute;
	bottom: 0;
	left: 0;*/
	width: 200px;
	color: #000;

}

.piel-logo img,
.piel-logo figcaption {
	width: 100%;
	padding: 0 !important;
}

.piel-logo figcaption {
	font-size: 48%;
	/*text-align: center;*/
}

/* ABOUT THE THERAPIST SECTION */

#about-therapist {
	background-color: #555;
}

#profile-photo {
	border-radius: 0; /* Not having any effect. */
}

/*.profile-img {
	width: 90%;
	margin: 0 0 0 auto;
}

.profile-img img {
	width: 100%;
}*/

/*.profile-img figcaption {
	text-align: center;
	padding: 10px;
}*/

/*.bio {
	width: 65%;
	margin: 0 auto;
	margin-bottom: 100px;
	padding-right: 150px;
	padding-left: 50px;
	text-align: justify;
	line-height: 1.5;
	font-weight: 300;

}*/

/*.bio p {
	padding-bottom: 20px; 
}*/

/* BENEFITS OF MASSAGE SECTION */

#benefits {
	background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))) , url(../img/hands-xl.jpg);
	background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)) , url(../img/hands-xl.jpg);
	background-size: cover; /*Shows entire image*/
	background-position: center; /*Centers the background*/
}

/*.benefits-row {
	width: 80%;
	margin: 0 auto;
}

.massage-benefits,
.more-benefits {
	width: 95%;
	margin: 0 auto;
	font-weight: 300;
	text-align: justify;
	line-height: 1.5;
}*/

.massage-benefits,
.objections,
.why-brenda {
	/*min-height: 200px;*/
	border: 1px solid #fff;
	/*border-radius: 5px;*/
	/*padding: 20px 20px 30px 20px;	*/
}

/*.massage-benefits,
.why-brenda {
	margin-bottom: 100px;

}

.massage-benefits p,
.massage-benefits ul {
	padding: 20px;
}

.massage-benefits li {
	margin-left: 40px;
	text-align: left;
}

.objections,
.why-brenda {

}*/

/* TESTIMONIALS SECTION */
#testimonials {

	/*background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))) , url(../img/john-henry-canault-218381.jpg);*/
	/*background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)) , url(../img/john-henry-canault-218381.jpg);*/
	background-image: url(../img/john-henry-canault-218381.jpg);
	background-attachment: fixed;
	background-size: cover; /*Shows entire image*/
	background-position: center; /*Centers the background*/

}

#testimonials h1 {
	color: #555;
}

/* FLEXBOX */
.flex-container {
	margin: 0 auto 100px auto;
	width: 70%;
	height: auto;
	padding-top: 40px;
	padding-bottom: 40px;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	/*flex-flow: */
	justify-content: flex-start;
	align-items: flex-start;
	align-content: flex-start;
}

.flex-items {
	color: #555;
	width: 45%;
	height: auto;
	padding: 30px;
	text-align: justify;
	line-height: 150%;
	letter-spacing: 1px;
	font-size: 105%;
	border: 1px solid #555;
	border-radius: 10px;
	margin: 15px;
	flex-grow: 1;
	flex: 0 1 auto;
}

/*#tania,
#amelia,
#dania {
	flex-grow: 2;
	width: 40%;
}*/

blockquote {
	padding-bottom: 25px;
}

.attribution {
	text-align: right;
}

/* SERVICES & RATES SECTION */
#rates {
	background-color: #000;
}

/*.rates-flex {

	width: 80%;
	margin: 0 auto;
	padding-bottom: 100px;

	display: -webkit-box;

	display: -ms-flexbox;

	display: flex;
	-ms-flex-wrap: wrap;
	    flex-wrap: wrap;

}*/

/*.services {
	border: 1px solid #fff;
	border-radius: 5px;
	padding: 15px;
	height: auto;
}*/

/*.services ul,
.payments ul {
	list-style: none;
	
}*/

 .side-by-side {
 	display: inline-block;
 	float: left;
}

/*.payments,
.policies {
	width: 99%;
}*/

/*.payments li {
	display: inline;
}*/

.payment-cards {
	height: 40px;
}

#cash-icon {
	/*color: green;*/
	/*font-size: 50px;*/
}

/* SCHEDULE NOW SECTION */
#schedule {
	background-color: #555;
}

/* ANIMATION */

.animated {
  animation-duration: 15s;
  animation-fill-mode: both;
}

@keyframes fadeInDown {
  from {
	opacity: 0;
	transform: translate3d(0, -300%, 0);
  }

  to {
	opacity: 1;
	transform: none;
  }
}

.fadeInDown {
  animation-name: fadeInDown;
}

